--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,12 @@ version: 1.1
 main: de.lucky44.luckybounties.LuckyBounties
 api-version: 1.14
 
+permissions:
+  lb.op:
+    default: op
+    description: Allows use of operator features of this plugin
+
+
 commands:
   bounties:
     aliases: b
