--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,8 @@ version: 1.5.1
 main: de.lucky44.luckybounties.LuckyBounties
 api-version: 1.14
 
+softdepend: [PlaceholderAPI]
+
 permissions:
   lb.op:
     default: op
