Added abillity to cancel bounties

--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -11,7 +11,8 @@ player-gui-title: "&l[PLAYERNAME]'s Bounties"
 set-gui-title: "&lSet bounty on [PLAYERNAME]"
 eco-bounty-name: "&6[AMOUNT][SYMBOL]"
 head-lore-format: "&8[AMOUNT]x [TYPE]"
-head-lore-eco-format: "[AMOUNT][SYMBOL]"
+head-lore-eco-format: "&8[AMOUNT][SYMBOL]"
+head-lore-overflow: "&8..."
 item-lore-set-by: "&8&l Set by [PLAYERNAME]"
 unknown-setter: "UNKNOWN"
 
@@ -32,9 +33,10 @@ player-not-found: "&c[PLAYERNAME] was not found or isn't online"
 not-holding-anything:  "&cYou are not holding anything"
 cannot-afford: "&c You cannot afford to set a bounty of [AMOUNT][SYMBOL]"
 bounty-below-zero: "&cThe payment for a bounty has to be above 0"
-cooldown-not-done: "&c You can't already set another bounty on [TARGET]"
-items-disabled: "&c Items are disabled"
-self-bounty-error: "&c You cannot set a bounty on yourself"
+cooldown-not-done: "&cYou can't already set another bounty on [TARGET]"
+items-disabled: "&cItems are disabled"
+self-bounty-error: "&cYou cannot set a bounty on yourself"
+inventory-full: "&cYour Inventory is full"
 
 #Messages - Notifications
 reload-complete: "&aReloaded config"
