--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,8 @@
 name: LuckyBounties
-version: 2.5.1
+version: 2.5.3
 main: de.lucky44.luckybounties.LuckyBounties
-api-version: 1.14
-load: POSTWORLD
+api-version: 1.18
+load: STARTUP
 
 softdepend: [PlaceholderAPI, Vault]
 
