--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -6,7 +6,7 @@
 main-gui-title: "&lBOUNTIES"
 player-gui-title: "&l[PLAYERNAME]'s Bounties"
 set-gui-title: "&lSet bounty on [PLAYERNAME]"
-eco-bounty-name: "&6[AMOUNT][SYMBOL]"
+eco-bounty-name: "&6[AMOUNT]"
 console-setter-name: "SYSTEM"                                                                                           # The "Name" the setter gets on a console-set bounty (Only use in the API as of now. Console set bounty will be added)
 
 #GUI - ItemLore
@@ -14,7 +14,7 @@ set-eco-item-lore:
   - "&6Input the amount you want to set above"
   - "&6And press this Item to confirm your Input"
 head-lore-format: "&8[AMOUNT]x [TYPE]"
-head-lore-eco-format: "&8[AMOUNT][SYMBOL]"
+head-lore-eco-format: "&8[AMOUNT]"
 head-lore-overflow: "&8..."
 item-lore-set-by: "&8&l Set by [PLAYERNAME]"
 
@@ -35,13 +35,14 @@ target-exempt: "&c[PLAYERNAME] is exempt from bounties"
 economy-disabled: "&cEconomy isn't enabled"
 player-not-found: "&c[PLAYERNAME] was not found or isn't online"
 not-holding-anything:  "&cYou are not holding anything"
-cannot-afford: "&cCannot afford [AMOUNT][SYMBOL]"
+cannot-afford: "&cCannot afford [AMOUNT]"
 bounty-below-zero: "&cThe payment for a bounty has to be above 0"
 cooldown-not-done: "&cYou can't already set another bounty on [TARGET]"
 items-disabled: "&cItems are disabled"
 self-bounty-error: "&cYou cannot set a bounty on yourself"
 inventory-full: "&cYour Inventory is full"
 not-a-number: "Not a number"
+bounty-too-low: "Minimum is [MINIMUM]"
 
 #Messages - Notifications
 reload-complete: "&aReloaded config"
@@ -54,6 +55,6 @@ eco-bounty-set: "&aSet bounty of [AMOUNT][SYMBOL] on [TARGET]"
 
 #Messages - GLOBAL - Notifications
 bounty-set-global: "[PLAYERNAME] set a bounty of &b[AMOUNT]x [ITEM]&r on [TARGET]"
-eco-bounty-set-global: "[PLAYERNAME] set a bounty of [AMOUNT][SYMBOL] on [TARGET]"
-bounty-take-global: "[PLAYERNAME] has taken [TARGET]'s bounties"
+eco-bounty-set-global: "[PLAYERNAME] set a bounty of [AMOUNT] on [TARGET]"
+bounty-take-global: "[PLAYERNAME] has taken [TARGET]'s [BOUNTIES]bounties}"                                              # to change the text that appears instead of [BOUNTIES], change the text immediately after it and put a bracket after it=> [BOUNTIES]text} = text (with hover stuff)
 eco-bounty-take-global: "[PLAYERNAME] has claimed [TARGET]'S $[AMOUNT] BOUNTY"
