A bunch of fixes and additions

--- a/pom.xml
+++ b/pom.xml
@@ -43,11 +43,11 @@
 
     <dependencies>
 
-        <!-- SPIGOT STUFF -->
+        <!-- this is a horrible way to cheat maven into letting me use 3 versions, but hey, it works -->
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot</artifactId>
-            <version>1.19.2-R0.1-SNAPSHOT</version>
+            <version>1.19.3-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
@@ -56,6 +56,22 @@
             <groupId>org.spigotmc.</groupId>
             <artifactId>spigot</artifactId>
             <version>1.18.2-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- SPIGOT STUFF -->
+        <dependency>
+            <groupId>org.spigotmc..</groupId>
+            <artifactId>spigot</artifactId>
+            <version>1.19.2-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- this is a horrible way to cheat maven into letting me use 2 versions, but hey, it works -->
+        <dependency>
+            <groupId>org.spigotmc...</groupId>
+            <artifactId>spigot</artifactId>
+            <version>1.16.5-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
