--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,15 @@
         <!-- this is a horrible way to cheat maven into letting me use 3 versions, but hey, it works -->
         <dependency>
             <groupId>org.spigotmc</groupId>
-            <artifactId>spigot</artifactId>
+            <artifactId>spigot-api</artifactId>
+            <version>1.20-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- this is a horrible way to cheat maven into letting me use 3 versions, but hey, it works -->
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-api</artifactId>
             <version>1.19.3-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
@@ -54,7 +62,7 @@
         <!-- this is a horrible way to cheat maven into letting me use 2 versions, but hey, it works -->
         <dependency>
             <groupId>org.spigotmc.</groupId>
-            <artifactId>spigot</artifactId>
+            <artifactId>spigot-api</artifactId>
             <version>1.18.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
@@ -62,7 +70,7 @@
         <!-- SPIGOT STUFF -->
         <dependency>
             <groupId>org.spigotmc..</groupId>
-            <artifactId>spigot</artifactId>
+            <artifactId>spigot-api</artifactId>
             <version>1.19.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
@@ -70,15 +78,22 @@
         <!-- this is a horrible way to cheat maven into letting me use 2 versions, but hey, it works -->
         <dependency>
             <groupId>org.spigotmc...</groupId>
-            <artifactId>spigot</artifactId>
+            <artifactId>spigot-api</artifactId>
             <version>1.16.5-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+
 
         <dependency>
             <groupId>com.tchristofferson</groupId>
             <artifactId>ConfigUpdater</artifactId>
             <version>2.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.TownyAdvanced.Towny</groupId>
+            <artifactId>towny</artifactId>
+            <version>0.99.2.2</version>
         </dependency>
 
         <dependency>
