Bounties will be returned when clear button is pressed and the returnRemovedBounties option is active

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea
+.idea/
 .idea/*
 .idea/modules.xml
 .idea/jarRepositories.xml
@@ -38,3 +38,5 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+dependency-reduced-pom.xml
