--- a/pom.xml
+++ b/pom.xml
@@ -48,13 +48,6 @@
 
         <dependency>
             <groupId>com.github.lucky44x</groupId>
-            <artifactId>luckybountiesAPI</artifactId>
-            <version>3.x</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.github.lucky44x</groupId>
             <artifactId>luckygui</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
@@ -106,14 +99,14 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>2.0.7</version>
+            <version>2.0.9</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.mariadb.jdbc</groupId>
             <artifactId>mariadb-java-client</artifactId>
-            <version>2.1.2</version>
+            <version>3.2.0</version>
             <scope>compile</scope>
         </dependency>
 
@@ -127,7 +120,7 @@
         <dependency>
             <groupId>com.github.LeonMangler</groupId>
             <artifactId>SuperVanish</artifactId>
-            <version>6.2.6-4</version>
+            <version>6.2.18-3</version>
             <scope>provided</scope>
         </dependency>
 
@@ -143,6 +136,12 @@
             <artifactId>Towny</artifactId>
             <version>0.99.5.0</version>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>su.nightexpress.coinsengine</groupId>
+            <artifactId>CoinsEngine</artifactId>
+            <version>2.1.1</version>
         </dependency>
     </dependencies>
 
