--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -36,6 +36,7 @@ reload-complete: "&a&lPlugin has been reloaded"
 
 #==== UTIL
 system-bounty-name: "SYSTEM"
+coins-engine-format: "[VALUE]$"
 
 #==== GUIS
 #== Items
